gpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpd
  labels:
    app: gpd
spec:
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
  selector:
    app: gpd
