gpd-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: "nginx"
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
   nginx.ingress.kubernetes.io/grpc-backend: "true"
 name: gpd-ingress
spec:
 rules:
    - host: example.domain 
      http:
        paths:
         - path:
           backend:
             serviceName: gpd
             servicePort: grpc
 tls:
  - secretName: gpd-secret
    hosts:
       - example.domain
